[package]
name = "gb-dx"
version = "0.1.0"
authors = ["SalC124 <Saltcal124@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
gb-core = { path = "../gb-core/" }
gb-runner = { path = "../gb-runner/" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
